crates/pg_syntax/tests/snapshots/data/0053@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE PUBLICATION insert_only FOR TABLE mydata WITH (publish = 'insert');"
---
CreatePublicationStmt@0..74
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Publication@7..18 "PUBLICATION"
  Whitespace@18..19 " "
  Ident@19..30 "insert_only"
  Whitespace@30..31 " "
  For@31..34 "FOR"
  Whitespace@34..35 " "
  Table@35..40 "TABLE"
  Whitespace@40..41 " "
  PublicationObjSpec@41..47
    PublicationTable@41..47
      RangeVar@41..47
        Ident@41..47 "mydata"
  Whitespace@47..48 " "
  With@48..52 "WITH"
  Whitespace@52..53 " "
  Ascii40@53..54 "("
  DefElem@54..72
    Ident@54..61 "publish"
    Whitespace@61..62 " "
    Ascii61@62..63 "="
    Whitespace@63..64 " "
    Sconst@64..72 "'insert'"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

