crates/pg_syntax/tests/snapshots/data/0055@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select 1 union select 2;
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..8
    ResTarget@7..8
      AConst@7..8
        Iconst@7..8 "1"
  Whitespace@8..9 " "
  Union@9..14 "union"
  Whitespace@14..15 " "
  SelectStmt@15..23
    Select@15..21 "select"
    Whitespace@21..22 " "
    ResTarget@22..23
      AConst@22..23
        Iconst@22..23 "2"
  Ascii59@23..24 ";"

